test/errors/function/unknown_keyword_argument.np
def fn(x: int) -> int:
    return x


x = fn(z=1)
